# SocialNetwork

./: CMakeLists.txt  README.md  bool_initalizer.c  bool_initalizer.h  conread.c  conread.h  datamgmt.c  datamgmt.h  delete_society.c  delete_society.h  filemgmt.c  filemgmt.h  information.c  information.h  kiiras.txt  main.c  menu.c  menu.h  menu1.c  menu1.h  menu1_information.c  menu1_information.h  misconceptions.c  misconceptions.h  readin.c  readin.h  spreading.c  spreading.h
